--- a/app/views/alugueis/show.html.erb
+++ b/app/views/alugueis/show.html.erb
@@ -1,27 +1,43 @@
-<p id="notice"><%= notice %></p>
+<div class="panel panel-info">
+	<div class="panel-body">
 
-<p>
-  <strong>Cliente:</strong>
-  <%= @aluguel.cliente.nome %>
-</p>
+		<p>
+			<strong>Número da reserva:</strong>
+			<%= @aluguel.id %>
+		</p>
 
-<p>
-  <strong>Veiculo:</strong>
-  <%= @aluguel.veiculo.modelo %>
-</p>
+		<p>
+			<strong>Cliente:</strong>
+			<%= @aluguel.cliente.nome %>
+		</p>
 
-<p>
-  <strong>Dt recebimento:</strong>
-  <%= @aluguel.dt_recebimento %>
-</p>
+		<p>
+			<strong>Veículo:</strong>
+			<%= @aluguel.veiculo.modelo %>
+		</p>
+		
+		<p>
+			<strong>Locadora:</strong>
+			<%= @aluguel.veiculo.locadora.nome %>
+		</p>
 
-<p>
-  <strong>Dt devolucao:</strong>
-  <%= @aluguel.dt_devolucao %>
-</p>
+		<p>
+			<strong>Data do recebimento:</strong>
+			<%= @aluguel.dt_recebimento.strftime("%d/%m/%Y") %>
+		</p>
 
-<p>
-  <strong>Preco total:</strong>
-  <%= @aluguel.preco_total %>
-</p>
+		<p>
+			<strong>Data da devolução:</strong>
+			<%= @aluguel.dt_devolucao.strftime("%d/%m/%Y") %>
+		</p>
 
+		<p>
+			<strong>Valor total:</strong>
+			<%= @aluguel.preco_total %>
+		</p>
+		
+		
+		<%= link_to 'Retornar', home_path, class: "btn btn-default btn-sm" %>
+
+	</div>
+</div>
