--- a/app/views/dashboard/locadora_index.html.erb
+++ b/app/views/dashboard/locadora_index.html.erb
@@ -32,14 +32,54 @@
   </div><!-- /.col-sm-4 -->
 
   <div class="col-sm-8">  
+
     <div class="panel panel-info">
       <div class="panel-heading">
-        <h3 class="panel-title">Alugueis</h3>
+        <h3 class="panel-title">Frota</h3>
       </div>
       <div class="panel-body">
-        <p>Dados do veiculo alugado</p>
-        <p>Datas de terminio do aluguel</p>
-        <p>Dados de pagamento do aluguel</p>
+        <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Placa</th>
+                  <th>Marca</th>
+                  <th>Ano</th>
+                  <th>Modelo</th>
+                  <th>Cor</th>
+                  <th>Locadora</th>
+                  <th>Garagem</th>
+                  <th>Categoria</th>
+                  <% if can? :read, Veiculo %>
+                    <th colspan="3">Ações</th>
+                  <% end %>
+                </tr>
+              </thead>
+
+              <tbody>
+                <% @veiculos.each do |veiculo|  %>
+                  <% if current_user.locadora_id == veiculo.locadora_id %>
+                  <tr>
+                    <td><%= veiculo.placa %></td>
+                    <td><%= veiculo.marca %></td>
+                    <td><%= veiculo.ano %></td>
+                    <td><%= veiculo.modelo %></td>
+                    <td><%= veiculo.cor %></td>
+                    <td><%= veiculo.locadora.nome %></td>
+                    <td><%= veiculo.garagem.nome %></td>
+                    <td><%= veiculo.categoria.nome %></td>
+                    <td>
+                      <%= link_to '', veiculo,  remote: true, class: "glyphicon glyphicon-search", 'data-toggle' => 'modal', 'data-target' => '#myModal' if can? :read, Veiculo %>
+                    </td>
+
+                    <td><%= link_to '', edit_veiculo_path(veiculo), class: "glyphicon glyphicon-edit" if can? :manage, Veiculo %></td>
+
+                    <td><%= link_to '', veiculo, method: :delete, data: { confirm: 'Are you sure?' }, class: "glyphicon glyphicon-remove-circle" if can? :manage, Veiculo %></td>
+
+                  </tr>
+                  <% end %>
+                <% end %>
+              </tbody>
+            </table>
       </div>
     </div>
   </div><!-- /.col-sm-4 -->      
