--- a/app/views/opcionais/_form.html.erb
+++ b/app/views/opcionais/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="form-group">
 
-    <%= f.input :descricao, label: 'Descricao', input_html: {class: 'form-control'} %><br>
+    <%= f.input :descricao, label: 'Descrição', input_html: {class: 'form-control'} %><br>
     <%= f.input :nome, label: 'Nome', input_html: {class: 'form-control'} %><br>
     <%= f.input :valor, label: 'Valor', input_html: {class: 'form-control'} %><br>
     <%= f.file_field :foto %>
